# agentic-human-user-simulation-for-ordering

./: .gitignore  NeurIPS Poster.xd  README.md  pyproject.toml  slidev_presentation.md
agents/: ablation_config.py  config.py  guest_agent.py  message.py  message_generation_agent.py  order_tracking_agent.py  utils.py
evaluations/: __init__.py  ablation_analyzer.py  batched_state_extractor.py  cost_analyzer.py  extract_latency_token_usage.py  final_state_extractor.py  latest_ablation_analysis_runner_output.txt  llm_evaluator_prompts.py  metrics_calculator.py  parallel_analyzer.py  run_ablation_analysis.py  simulation_quality_assessment_metrics.txt  state_extractor.py  statistical_reporter.py
evaluations/results/: ablation_results.json  bvs_interpretation.csv  cost_analysis_data.json  cost_analysis_report.txt  statistical_report.json  summary_statistics.csv
notebooks/: voice_client_order_case_generator_testing.ipynb
scripts/: conversation_config_and_helpers.py  llm_prompts_config.py  run_validation_conversation_with_agent.py  run_validation_conversation_with_llm.py  simulate_conversation_with_agent.py  simulate_conversation_with_llm.py  test_run_convo_with_order_taking_llm.py
test_case_generation/: test_case_loader.py
validation_conversation_logs/: chat_with_guest_simulation_agent_messages_log_Sarah-Johnson_iteration_0.csv  chat_with_guest_simulation_llm_messages_log_Sarah-Johnson_iteration_0.csv  chat_with_guest_simulation_llm_messages_log__iteration_0.csv
validation_llm_client/: base_client.py  chat_handler.py  message.py  openai_client.py
(+1545 files in other folders)
